# icfp2021

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
tests/: test_icfp2021.py
