[tool.poetry]
name = "icfp2021"
version = "0.1.0"
description = ""
authors = ["Brendan Leber <brendan@brendanleber.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
isort = "^5.9.1"
mypy = "^0.910"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 100
multi_line_output=3
include_trailing_comma = true
use_parentheses = true

[tool.black]
line_length = 100
target_version = ["py39"]
exclude = '''
/(
    \.git
    | \.mypy_cache
)/'''

[tool.coverage.run]
branch = true
